<resources>
    <string name="app_name">ExpensesTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Definições</string>
    <string name="orcamentototal">Orçamento Total:\u0020</string>
    <string name="dinheiroGasto">Dinheiro Gasto:\u0020</string>
    <string name="balanco">"Balanço: "</string>
    <string name="unidade_monetaria">" € "</string>
    <string name="rendimentos">Rendimentos</string>
    <string name="alimentacao">Alimentação</string>
    <string name="alojamento">Alojamento</string>
    <string name="transportes">Transportes</string>
    <string name="universidade">Universidade</string>
    <string name="lazer">Lazer</string>
    <string name="outros">Outros</string>
    <string name="NovoRendimento">Novo Rendimento</string>
    <string name="NovaDespesa">Nova Despesa</string>
    <string name="editTransacao">Editar transação</string>
    <string name="orcamento">Orçamento:</string>
    <string name="orcamento_restante">Orçamento Restante:</string>
    <string name="dinheiro_total">Dinheiro Total:</string>
    <string name="orcamento_disponivel">Orçamento disponível:</string>

</resources>
