<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rendimentos"
            android:title="@string/rendimentos" />
        <item
            android:id="@+id/nav_alimentacao"
            android:title="@string/alimentacao" />
        <item
            android:id="@+id/nav_alojamento"
            android:title="@string/alojamento" />
        <item
            android:id="@+id/nav_transportes"
            android:title="@string/transportes" />
        <item
            android:id="@+id/nav_universidade"
            android:title="@string/universidade" />
        <item
            android:id="@+id/nav_lazer"
            android:title="@string/lazer" />
        <item
            android:id="@+id/nav_outros"
            android:title="@string/outros" />

    </group>


</menu>
